# cognito-rest-auth-sample

./: .gitignore  README.md  pyproject.toml
cognito_rest_auth/: apps.py  views.py
config/: settings.py  urls.py
src/cognito_auth/: __init__.py
